# json-c

./: .gitignore  CMakeLists.txt  arraylist.c  cifuzz-hints.txt  cifuzz.yaml  fuzz.cpp  fuzz2.cpp  fuzz3.cpp  fuzz4.cpp  fuzz5.cpp  json_object.c  json_object.h
cifuzz-spark/: CMakeLists.txt  fuzz_json_object_from_fd.cpp  fuzz_json_object_from_fd_1.cpp  fuzz_json_object_from_fd_2.cpp  fuzz_json_object_from_fd_3.cpp  fuzz_json_object_from_fd_ex.cpp  fuzz_json_object_from_fd_ex_1.cpp  fuzz_json_object_from_fd_ex_2.cpp  fuzz_json_object_from_fd_ex_3.cpp  fuzz_json_object_from_file.cpp  fuzz_json_object_from_file_1.cpp  fuzz_json_object_from_file_2.cpp  fuzz_json_object_from_file_3.cpp  fuzz_json_patch_apply.cpp  fuzz_json_patch_apply_1.cpp  fuzz_json_patch_apply_2.cpp  fuzz_json_patch_apply_3.cpp  fuzz_json_pointer_getf.cpp  fuzz_json_pointer_getf_1.cpp  fuzz_json_pointer_set.cpp  fuzz_json_pointer_set_1.cpp  fuzz_json_pointer_set_2.cpp  fuzz_json_pointer_set_3.cpp  fuzz_json_pointer_set_with_array_cb.cpp  fuzz_json_pointer_set_with_array_cb_1.cpp  fuzz_json_pointer_set_with_array_cb_2.cpp  fuzz_json_pointer_set_with_array_cb_3.cpp  fuzz_json_pointer_setf.cpp  fuzz_json_pointer_setf_1.cpp  fuzz_json_pointer_setf_2.cpp  fuzz_json_pointer_setf_3.cpp  fuzz_json_tokener_parse.cpp  fuzz_json_tokener_parse_1.cpp  fuzz_json_tokener_parse_2.cpp  fuzz_json_tokener_parse_3.cpp  fuzz_json_tokener_parse_ex.cpp  fuzz_json_tokener_parse_ex_1.cpp  fuzz_json_tokener_parse_ex_2.cpp  fuzz_json_tokener_parse_verbose.cpp  fuzz_json_tokener_parse_verbose_1.cpp  (+2 more)
fuzz/: json_array_fuzzer.cc  json_object_fuzzer.cc  json_object_fuzzer.dict  json_pointer_fuzzer.cc
tests/: test_cast.expected
