# cifuzz:build-template:begin
# add_fuzz_test({{ .FuzzTestName }} {{ .FileName }})
# target_link_libraries({{ .FuzzTestName }} PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
# cifuzz:build-template:end
add_fuzz_test(fuzz_json_patch_apply fuzz_json_patch_apply.cpp)
target_link_libraries(fuzz_json_patch_apply PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_patch_apply_1 fuzz_json_patch_apply_1.cpp)
target_link_libraries(fuzz_json_patch_apply_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_patch_apply_2 fuzz_json_patch_apply_2.cpp)
target_link_libraries(fuzz_json_patch_apply_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_patch_apply_3 fuzz_json_patch_apply_3.cpp)
target_link_libraries(fuzz_json_patch_apply_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_file_1 fuzz_json_object_from_file_1.cpp)
target_link_libraries(fuzz_json_object_from_file_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_file_2 fuzz_json_object_from_file_2.cpp)
target_link_libraries(fuzz_json_object_from_file_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_file_3 fuzz_json_object_from_file_3.cpp)
target_link_libraries(fuzz_json_object_from_file_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_1 fuzz_json_pointer_set_1.cpp)
target_link_libraries(fuzz_json_pointer_set_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd fuzz_json_object_from_fd.cpp)
target_link_libraries(fuzz_json_object_from_fd PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_1 fuzz_json_object_from_fd_1.cpp)
target_link_libraries(fuzz_json_object_from_fd_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_2 fuzz_json_object_from_fd_2.cpp)
target_link_libraries(fuzz_json_object_from_fd_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_3 fuzz_json_object_from_fd_3.cpp)
target_link_libraries(fuzz_json_object_from_fd_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_ex_1 fuzz_json_object_from_fd_ex_1.cpp)
target_link_libraries(fuzz_json_object_from_fd_ex_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_ex_2 fuzz_json_object_from_fd_ex_2.cpp)
target_link_libraries(fuzz_json_object_from_fd_ex_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_object_from_fd_ex_3 fuzz_json_object_from_fd_ex_3.cpp)
target_link_libraries(fuzz_json_object_from_fd_ex_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_2 fuzz_json_pointer_set_2.cpp)
target_link_libraries(fuzz_json_pointer_set_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_verbose fuzz_json_tokener_parse_verbose.cpp)
target_link_libraries(fuzz_json_tokener_parse_verbose PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_verbose_1 fuzz_json_tokener_parse_verbose_1.cpp)
target_link_libraries(fuzz_json_tokener_parse_verbose_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_verbose_2 fuzz_json_tokener_parse_verbose_2.cpp)
target_link_libraries(fuzz_json_tokener_parse_verbose_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_verbose_3 fuzz_json_tokener_parse_verbose_3.cpp)
target_link_libraries(fuzz_json_tokener_parse_verbose_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse fuzz_json_tokener_parse.cpp)
target_link_libraries(fuzz_json_tokener_parse PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_1 fuzz_json_tokener_parse_1.cpp)
target_link_libraries(fuzz_json_tokener_parse_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_3 fuzz_json_tokener_parse_3.cpp)
target_link_libraries(fuzz_json_tokener_parse_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_ex fuzz_json_tokener_parse_ex.cpp)
target_link_libraries(fuzz_json_tokener_parse_ex PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_ex_1 fuzz_json_tokener_parse_ex_1.cpp)
target_link_libraries(fuzz_json_tokener_parse_ex_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_tokener_parse_ex_2 fuzz_json_tokener_parse_ex_2.cpp)
target_link_libraries(fuzz_json_tokener_parse_ex_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_setf fuzz_json_pointer_setf.cpp)
target_link_libraries(fuzz_json_pointer_setf PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_setf_1 fuzz_json_pointer_setf_1.cpp)
target_link_libraries(fuzz_json_pointer_setf_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_setf_2 fuzz_json_pointer_setf_2.cpp)
target_link_libraries(fuzz_json_pointer_setf_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_setf_3 fuzz_json_pointer_setf_3.cpp)
target_link_libraries(fuzz_json_pointer_setf_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_3 fuzz_json_pointer_set_3.cpp)
target_link_libraries(fuzz_json_pointer_set_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_with_array_cb fuzz_json_pointer_set_with_array_cb.cpp)
target_link_libraries(fuzz_json_pointer_set_with_array_cb PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_with_array_cb_2 fuzz_json_pointer_set_with_array_cb_2.cpp)
target_link_libraries(fuzz_json_pointer_set_with_array_cb_2 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_set_with_array_cb_3 fuzz_json_pointer_set_with_array_cb_3.cpp)
target_link_libraries(fuzz_json_pointer_set_with_array_cb_3 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_getf fuzz_json_pointer_getf.cpp)
target_link_libraries(fuzz_json_pointer_getf PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
add_fuzz_test(fuzz_json_pointer_getf_1 fuzz_json_pointer_getf_1.cpp)
target_link_libraries(fuzz_json_pointer_getf_1 PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CMAKE_PROJECT_NAME}>")
